# mlx-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_steering.py  sae_analysis.py  scale_search.py
mlx_lens/: __init__.py  model.py  sae.py
