[project]
name = "mlx-lens"
version = "0.1.1"
description = "Mechanistic interpretability on Apple Silicon: steering vectors, residual capture, and SAE analysis for MLX models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Wenbin Wu" }]
keywords = ["mlx", "interpretability", "steering-vectors", "sae", "mechanistic-interpretability"]
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.22.0",
    "numpy",
    "safetensors",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]
huggingface = ["huggingface-hub"]
engine = ["vllm-mlx>=0.2.0"]
all = ["mlx-lens[huggingface,engine]"]

[project.urls]
Homepage = "https://github.com/dthinkr/mlx-lens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_lens"]
